<resources>
    <string name="app_name">Kultum</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="kultum">kultum</string>
    <string name="txt_please_input_your_account">please input your account below</string>
    <string name="txt_email">Email</string>
    <string name="txt_password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="copyright2022">Copyright 2022 © 11 RPL B</string>
    <string name="let_s_create_your_account_first">let\'s create your account first</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="register">Register</string>
    <string name="image_for_back">Image for Back</string>
    <string name="image_for_logout">Image for Logout</string>
    <string name="change_photo">Change photo</string>
    <string name="username">Username</string>
    <string name="name">Name</string>
    <string name="bio">Bio</string>
    <string name="save">Save</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="image_application">Image Application</string>
    <string name="image_for_search">image for search</string>
    <string name="comments">comments</string>
    <string name="image_for_close">image for close</string>
    <string name="add_comment">Add comment</string>
    <string name="powered_by">Powered by</string>
    <string name="Youtube">Youtube</string>
    <string name="txt_share_msg">Share this Kultum to...</string>
</resources>