<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.register.RegisterActivity">

    <TextView
        android:id="@+id/tv_kultum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:textColor="@color/primary_color"
        android:textSize="60sp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:fontFamily="@font/remachin_script"
        android:layout_marginTop="70dp"
        android:text="@string/kultum"/>

    <TextView
        android:id="@+id/tv_explain"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/let_s_create_your_account_first"
        app:layout_constraintTop_toBottomOf="@id/tv_kultum"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="24dp" />

    <EditText
        android:id="@+id/edt_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_explain"
        android:layout_marginTop="73dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/bg_edit_text"
        android:paddingVertical="14dp"
        android:paddingHorizontal="20dp"
        android:hint="@string/txt_email"
        android:inputType="textEmailAddress"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edt_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edt_email"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/bg_edit_text"
        android:paddingVertical="14dp"
        android:paddingHorizontal="20dp"
        android:hint="@string/username"
        android:autofillHints="" />

    <EditText
        android:id="@+id/edt_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edt_username"
        android:layout_marginTop="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="24dp"
        android:background="@drawable/bg_edit_text"
        android:paddingVertical="14dp"
        android:paddingHorizontal="20dp"
        android:hint="@string/txt_password"
        android:inputType="textPassword"
        android:autofillHints="" />



    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_regis"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/primary_color"
        app:cornerRadius="8dp"
        app:layout_constraintTop_toBottomOf="@id/edt_password"
        android:layout_marginHorizontal="24dp"
        android:layout_marginTop="60dp"
        android:text="@string/register"
        android:textAllCaps="false"
        android:fontFamily="@font/poppins_medium"/>

    <LinearLayout
        android:id="@+id/linear_bot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="horizontal"
        android:layout_marginTop="40dp"
        app:layout_constraintTop_toBottomOf="@id/btn_regis">

        <TextView
            android:id="@+id/tv_already"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/already_have_an_account"/>

        <TextView
            android:id="@+id/tv_login"
            android:layout_marginStart="8dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/primary_color"
            android:fontFamily="@font/poppins_medium"
            android:text="@string/login"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/copyright2022"
        android:layout_marginBottom="35dp"
        android:textColor="@color/primary_color"/>



</androidx.constraintlayout.widget.ConstraintLayout>