<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="24dp"
    tools:context=".presentation.edit.EditActivity">

    <ImageView
        android:id="@+id/img_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp"
        android:contentDescription="@string/image_for_back"
        android:src="@drawable/ic_back"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/image_for_logout"
        android:src="@drawable/ic_logout"
        android:focusable="true"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="@id/img_back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/img_back" />

    <com.makeramen.roundedimageview.RoundedImageView
        android:id="@id/img_profile"
        android:layout_width="127dp"
        android:layout_height="150dp"
        android:layout_marginTop="30dp"
        android:src="@drawable/img_profile_sample"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_logout"
        app:riv_corner_radius="100dp" />

    <TextView
        android:id="@+id/tv_change_photo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/poppins_medium"
        android:text="@string/change_photo"
        android:textColor="@color/primary_color"
        android:clickable="true"
        android:focusable="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_profile" />

    <TextView
        android:id="@+id/tv_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_change_photo" />

    <EditText
        android:id="@+id/tv_username_fill"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:autofillHints=""
        android:inputType="textPersonName"
        android:maxLines="1"
        android:text="@string/username"
        app:layout_constraintBottom_toBottomOf="@id/tv_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_username"
        app:layout_constraintTop_toTopOf="@id/tv_username" />

    <TextView
        android:id="@+id/tv_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_username" />

    <EditText
        android:id="@+id/tv_name_fill"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:autofillHints=""
        android:inputType="textPersonName"
        android:maxLines="1"
        android:text="@string/name"
        app:layout_constraintBottom_toBottomOf="@id/tv_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_name"
        app:layout_constraintTop_toTopOf="@id/tv_name" />

    <TextView
        android:id="@+id/tv_bio"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/bio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_name" />

    <EditText
        android:id="@+id/tv_bio_fill"
        android:layout_width="170dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="65dp"
        android:autofillHints=""
        android:inputType="text"
        android:maxLines="2"
        android:text="@string/bio"
        app:layout_constraintBottom_toBottomOf="@id/tv_bio"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/tv_bio"
        app:layout_constraintTop_toTopOf="@id/tv_bio" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_save"
        android:layout_width="186dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_bio"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:backgroundTint="@color/primary_color"
        android:text="@string/save"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>