<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.comment.CommentFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingHorizontal="24dp">

            <LinearLayout
                android:id="@+id/linear_comment"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">

                <TextView
                    android:id="@+id/tv_total"
                    android:layout_width="wrap_content"
                    android:layout_marginEnd="4dp"
                    android:layout_height="wrap_content"
                    android:text="10.4k"/>

                <TextView
                    android:id="@+id/tv_comment"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/comments"/>
            </LinearLayout>

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_close"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/linear_comment"
                app:layout_constraintBottom_toBottomOf="@id/linear_comment"
                android:contentDescription="@string/image_for_close" />


            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_comment"
                android:layout_width="match_parent"
                android:layout_height="400dp"
                tools:listitem="@layout/item_comment"
                app:layout_constraintTop_toBottomOf="@id/linear_comment"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginTop="24dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_gravity="bottom">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginHorizontal="24dp"
            android:gravity="center">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/img_profile"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@drawable/img_profile_sample"
                app:riv_corner_radius="20dp"/>

            <EditText
                android:id="@+id/edt_message"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="8dp"
                android:paddingVertical="8dp"
                android:paddingStart="8dp"
                android:hint="@string/add_comment"
                android:inputType="text"
                android:textSize="13sp"
                android:background="@drawable/bg_edit_text"
                android:fontFamily="@font/poppins_regular"
                android:autofillHints="" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/btn_send_comment"
                android:layout_width="30dp"
                android:layout_height="30dp"
                app:cardCornerRadius="10dp"
                app:cardBackgroundColor="@color/primary_color">

                <ImageView
                    android:layout_width="14dp"
                    android:layout_height="14dp"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_send" />

            </com.google.android.material.card.MaterialCardView>

        </LinearLayout>

    </com.google.android.material.bottomappbar.BottomAppBar>

</androidx.coordinatorlayout.widget.CoordinatorLayout>